translated the new items in menus and services, and the wizard (into Spanish)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -1,5 +1,5 @@
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manuale
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manualmente
 
 RE-IMPORT\ THIS\ BRANCH=Reimporta  questo ramo
 
@@ -21,7 +21,7 @@ REMOVE\ REMOTE\ LOCATION=Rimuovi postazione remota
 
 ADD\ DEFAULT\ LOCATIONS=Aggiungi postazioni di default
 
-THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le postazioni di default esistono gi\u00e0 e non verranno aggiunte di nuovo
+THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le postazioni di default esistono gi\u00e0 e non verranno aggiunte nuovamente
 
 ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi postazioni remote di default
 
@@ -107,7 +107,7 @@ ARBIL\ FORUM\ (WEBSITE)=Forum (sito Web)
 
 YES=s\u00ec
 
-RUN\ SETUP\ WIZARD=Esegui impostazione guidata
+RUN\ SETUP\ WIZARD=Esegui procedura guidata
 
 ABOUT=Informazioni su
 
@@ -133,9 +133,9 @@ PLUGIN\ ERROR=Errore di plugin
 
 COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossibile caricare il plugin: {0}
 
-EDIT\ COLUMN\ VIEWS=Modifica vista colonna
+EDIT\ COLUMN\ VIEWS=Modifica visualizzazione a colonne
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista colonna per nuove tabelle
+COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione a colonne per nuove tabelle
 
 SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
@@ -163,11 +163,11 @@ SHOW\ SELECTION\ PREVIEW=Mostra anteprima selezione
 
 SAVE\ WINDOWS\ ON\ EXIT=Salva finestre prima di uscire
 
-RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica elenchi di parole correnti
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica vocabolari correnti
 
 EDIT\ IMDI\ LANGUAGE\ LIST...=Modifica elenco lingue IMDI...
 
-MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY=Sposta cartella di archiviazione del corpus locale...
+MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY=Sposta cartella di archiviazione del corpus locale
 
 MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY...=Sposta cartella di archiviazione del corpus locale...
 
@@ -231,7 +231,7 @@ VIEW\ XML=Visualizza XML
 
 OPEN\ IN\ EXTERNAL\ APPLICATION=Apri in applicazione esterna
 
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Ignora type checking
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Disabilita decisione del type checking
 
 SAVE\ CHANGES\ TO\ DISK=Salva modifiche su disco
 
@@ -242,7 +242,7 @@ ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPL
 LOGOUT\ ERROR=Errore durante il logout
 IMPORT/EXPORT\ FAVOURITES=Importa/esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
-EDIT\ THIS\ COLUMN\ VIEW=Modifica questa vista colonna
+EDIT\ THIS\ COLUMN\ VIEW=Modifica questa visualizzazione a colonne
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
 COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
@@ -251,7 +251,7 @@ DELETE\ FIELD\ FROM\ ALL\ NODES=Elimina campo da tutti i nodi
 THIS\ COLUMN=Questa colonna ({0})
 ALL\ COLUMNS=Tutte le colonne
 HIDE\ COLUMN=Nascondi colonna
-SAVE\ CURRENT\ COLUMN\ VIEW=Salva vista colonna corrente
+SAVE\ CURRENT\ COLUMN\ VIEW=Salva visualizzazione a colonne corrente
 COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Impossibile ripristinare la versione, nessuna modifica effettuata
 FORCE\ TYPE\ CHECKING=Forza type checking
 MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
@@ -267,11 +267,15 @@ SELECT\ MATCHING\ ROWS=Seleziona righe corrispondenti
 ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, visualizza log degli errori nel menu Guida per maggiori informazioni.
 SHOW\ LOG\ CONSOLE=Mostra console del log
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La console del log non \u00e8 disponibile quando si utilizza la versione web start
-MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Se selezionato, l'albero del corpus seguir\u00e0 la struttra dei documenti CMDI senza unire o compattare
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Se selezionato, l'albero del corpus seguir\u00e0 la struttura dei documenti CMDI senza unire n\u00e9 compattare
 LANGUAGE\ SELECTION=Selezione lingua
 PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VISIBLE=Riavviare l'applicazione per rendere visibile la selezione della lingua
 PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Selezionare la lingua preferita
 SELECT\ LANGUAGE=Seleziona lingua
-MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Mostra struttura XML verbatim nell'abero per CMDI
-SYSTEM\ DEFAULT=Predefinito del sistema
-MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Si \u00e8 scelto di cambiare il modo di visualizzare i documenti dei metadati sull'albero.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Mostra struttura XML verbatim nell'albero per CMDI
+SYSTEM\ DEFAULT=Predefinita del sistema
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Il modo in cui i documenti di metadati vengono visualizzati sull'albero \u00e8 stato modificato.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
+MENU_INCREASE_FONT_SIZE=Carattere pi\u00f9 grande
+MENU_DECREASE_FONT_SIZE=Carattere pi\u00f9 piccolo
+MENU_RESET_FONT_SIZE=Reimposta dimensione carattere
+MENU_VIEW=Visualizza
