--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -2,7 +2,7 @@ THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=Impossibile aprire i file di metadat
 CMDI\ SCHEMA\ LOCATION=Postazione schema CMDI
 COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Impossibile trovare l'URL dello schema, alcuni nodi non verranno visualizzati correttamente. 
 LOAD\ IMDI\ FILES=Carica file IMDI
-A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Un attributo DOM id \u00e8 stato trovato in uno o pi\u00f9 file, tali file dovranno essere salvati per correggere il problema.
+A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Un attributo DOM ID \u00e8 stato trovato in uno o pi\u00f9 file, tali file dovranno essere salvati per correggere il problema.
 INSERT\ FROM\ TEMPLATE=Inserisci da modello
 ERROR\ READING\ TEMPLATE=Errore durante la lettura del modello
 ADD\ FROM\ TEMPLATE=Aggiungi da modello
@@ -17,7 +17,7 @@ ADD\ NODE=Aggiungi nodo
 NEW\ RESOURCE\ IN\ %S=Nuova risorsa in {0}
 NEW\ RESOURCES\ IN\ %S=Nuove risorse in {0}
 #{0} is a mimetype string (which represents the exact file type of a resource, see https://en.wikipedia.org/wiki/Mimetype)
-THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=Non esiste nessun elenco di parole per le risorse scritte o i file multimediali che corrisponda a "{0}".
+THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=Non esiste nessun vocabolario controllato per le risorse scritte o i file multimediali che corrisponda a "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=Il file potrebbe non essere archiviabile. Si pu\u00f2 comunque procedere selezionando manualmente il tipo di risorsa.
 DO\ YOU\ WANT\ TO\ PROCEED?=Si desidera continuare?
 WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L'operazione non garantisce che i dati possano essere caricati sul server del corpus!
@@ -46,7 +46,7 @@ LOAD\ CLARIN\ TEMPLATE=Carica modello Clarin
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Impossibile rimuovere il proxy risorsa con id {0}
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relazione imprevista tra percorso di origine e di destinazione. Vedi log degli errori per maggiori dettagli.
 INSERT\ NODE=Inserisci nodo
-COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Impossibile leggera lo schema XML
+COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Impossibile leggere lo schema XML
 ERROR\ INSERTING\ NODE=Errore durante l'inserimento del nodo
 NO\ TEMPLATE\ FOUND\ FOR=Nessun modello trovato per: {0}
 #{0} is the location of the current project, {1} is the location of the project to be switched to
@@ -55,7 +55,7 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil do
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Errore nel salvataggio della configurazione in {0}
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel 'Corpus locale' nella postazione richiesta.\n\u00c8 possibile annullare l'operazione ora (senza che venga effettuata alcuna modifica), o \nmodificare la cartella di lavoro.\nIn quest'ultimo caso, gli eventuali file corpus o file sessione presenti nel 'Corpus locale' \nverranno spostati nell'albero 'Cartelle di lavoro' e dovranno essere importati manualmente.\nSi desidera modificare comunque la cartella di lavoro?\n\n
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel 'Corpus locale' nella postazione richiesta.\n\u00c8 possibile annullare l'operazione ora (senza che venga effettuata alcuna modifica), o \nmodificare la cartella di lavoro.\nIn quest'ultimo caso, gli eventuali file corpus o file sessione presenti nel 'Corpus locale' \nverranno spostati nell'albero 'Cartelle di lavoro' e dovranno essere importati manualmente.\nSi desidera modificare comunque la cartella di lavoro?
 ERROR\ SAVING\ CONFIGURATION=Errore nel salvataggio della configurazione
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Impossibile scrivere la nuova configurazione in {0}
@@ -64,11 +64,17 @@ THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ 
 THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Nuova versione disponibile.\nSelezionare sul sito internet il link di download ed eseguire l'aggiornamento.
 THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Errore durante il riavvio dell'applicazione.\nL'aggiornamento sar\u00e0 reso effettivo al prossimo riavvio.\n
 ERROR=Errore
-There\ is\ a\ new\ version\ available=Nuova verione disponibile\nAggiornare ora?
+There\ is\ a\ new\ version\ available=Nuova versione disponibile\nAggiornare ora?
 #Journal is a 'logbook' that tracks all actions taken in Arbil
 FAILED\ TO\ PASS\ THE\ JOURNAL\ TO\ THE\ REQUESTED\ PLUGIN=Impossibile passare il registro al plugin richiesto.
 FAILED\ TO\ ACTIVATE\ THE\ REQUESTED\ PLUGIN=Impossibile attivare il plugin richiesto.
 FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Impossibile mostrare il plugin richiesto.
-NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per attivare questo tipo di plugin no ancora disponibile.
+NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per attivare questo tipo di plugin non ancora disponibile.
 FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Impossibile disattivare il plugin richiesto.
 NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per disattivare questo tipo di plugin non ancora disponibile. 
+DOWNLOADING\ CURRENTLY\ LOADED\ VOCABULARIES=Download dei vocabolari attualmente caricati in corso
+DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\ NEED\ TO\ RESTART\ THE\ APPLICATION\ FOR\ THE\ NEW\ VOCABULARIES\ TO\ TAKE\ EFFECT=Scaricato/i {0} dei {1} vocabolari attualmente in uso.\n\u00c8 necessario riavviare l'applicazione affinch\u00e9 i nuovi vocabolari possano essere utilizzati.
+A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=Impossibile leggere uno dei vocabolari controllati.\n{0}\nAlcuni campi potrebbero non visualizzare tutti le opzioni disponibili.
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica vocabolari correnti
+LOAD\ CONTROLLED\ VOCABULARY=Carica vocabolario controllato
+DOWNLOADED\:\ {0}\ FAILED\:\ {1}=scaricato/i: {0} non scaricato/i: {1}
