--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -38,7 +38,7 @@ LICENSE=Licenza
 ABOUT\ {0}=Informazioni su {0}
 CLOSE=Chiudi
 DISPLAY\ LICENSE=Visualizza licenza
-ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l''organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata o sviluppata da {0}\nMantenimento ed estensioni a cura di {1}\nArbil si serve inolre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {2} {3} {4}\n{5}\nData di compilazione: {6}\n\nVersione Java: {7}\nFornitore: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nSeleziona Visualizza licenza per vedere la versione completa della licenza.\n
+ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l''organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata e sviluppata da {0}\nMantenimento ed estensioni a cura di {1}\nArbil si serve inoltre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {2} {3} {4}\n{5}\nData di compilazione: {6}\n\nVersione Java: {7}\nFornitore: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nSeleziona Visualizza licenza per vedere la versione completa della licenza.
 SAVE\ TO\ DISK?=Salvare su disco?
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Tutte le modifiche a {0} ancora in sospeso veranno salvate. Continuare?
@@ -69,7 +69,7 @@ EXPORT\ SELECTION=Esporta selezione
 REFRESH=Aggiorna
 IMPORT\ FROM\ DISK=Importa da disco
 FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=La cartella dovrebbe contenere un file denominato {0}.
-FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Clicca su 'Importa' e seleziona una cartella esistente contenente una serie di preferiti precedentemente esportati.
+FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Clicca su Importa e seleziona una cartella esistente contenente una collezione di preferiti precedentemente esportati.
 EXPORT\ FAVOURITES=Esporta preferiti
 IMPORT\ FAVOURITES=Importa preferiti
 PREVIOUS=Precedente
@@ -117,7 +117,7 @@ TABLE_FIXED\ WIDTH={0} [larghezza fissa]
 NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=Nessun campo corrisponde ai dati nella clipboard.
 NO\ DATA\ TO\ PASTE.=Nessun dato da incollare.
 CONTINUE?=Continuare?
-THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=L''operazione ''Incolla'' comporter\u00e0 l''eliminazione del contenuto di {0} campo/i.
+THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=L''operazione Incolla comporter\u00e0 l''eliminazione del contenuto di {0} campo/i.
 TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Due campi con lo stesso nome devono essere incollati in questa tabella,\nuno dei due campi verr\u00e0 sostituito dall'altro.\n
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Il numero delle colonne presenti nei dati da incollare \u00e8 inconsistente.\nI dati incollati potrebbero essere errati.\n
 INCORRECT\ DATA\ TO\ PASTE=Dati da incollare errati.\nI dati devono essere copiati da una tabella contenente un solo nodo,\noppure selezionando singolarmente le celle della tabella.
@@ -127,7 +127,7 @@ SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=visualizzazione del menu intestazione per
 NO\ ROWS\ SELECTED=Nessuna riga selezionata
 PASTE\ INTO\ TABLE=Incolla nella tabella
 TABLE\ COPY=Copia della tabella
-NOTHING\ SELECTED\ TO\ COPY=Nessun elemento elezionato per la copia
+NOTHING\ SELECTED\ TO\ COPY=Nessun elemento selezionato per la copia
 COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Impossibile impostare gli attributi per il nuovo campo. Vedi log degli errori per maggiori dettagli
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Errore durante l'impostazione degli attributi del campo
 THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=Il nodo ''{0}'' non pu\u00f2 contenere un campo dello stesso tipo di ''{1}'' in ''{2}''
@@ -135,17 +135,17 @@ COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile creare il
 INSERT\ FIELD=Inserisci campo
 INSERT\ A\ NEW\ FIELD\ CONFIRM=Inserire un nuovo campo ''{0}'' nel nodo ''{1}''?\nLe modifiche in sospeso verranno salvate.\n
 HIGHLIGHT\ MATCHING\ ROWS=Evidenzia righe corrispondenti
-NO\ ROWS\ HAVE\ BEEN\ SELECTED=Nessuna riga selezionata
+NO\ ROWS\ HAVE\ BEEN\ SELECTED=Non \u00e8 stata selezionata nessuna riga
 DELETE\ FIELD=Elimina campo
 DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Eliminare %1$d esempi(o) del campo ''{1}''?
 CANNOT\ DELETE=Impossibile eliminare
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Questo campo non pu\u00f2 essere eliminato da uno o pi\u00f9 dei nodi visualizzati
-A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una visualizzazione a colonna con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
-SAVE\ COLUMN\ VIEW=Salva visualizzazione a colonna
-ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione a colonna come
-EDITING\ CURRENT\ COLUMN\ VIEW=Modifica in corso della visualizzazione a colonna corrente
+A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Un tipo di visualizzazione a colonne con lo stesso nome esiste gi\u00e0, nessun salvataggio effettuato
+SAVE\ COLUMN\ VIEW=Salva visualizzazione a colonne
+ENTER\ A\ NAME\ TO\ SAVE\ THIS\ COLUMN\ VIEW\ AS=Inserisci nome per salvare questo tipo di visualizzazione a colonne come
+EDITING\ CURRENT\ COLUMN\ VIEW=Modifica della visualizzazione a colonne corrente in corso
 SHOW\ CHILD\ NODES=Mostra nodi figli
-SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Selezionare il tipo di nodo figlio da visualizzare
+SELECT\ THE\ CHILD\ NODE\ TYPE\ TO\ DISPLAY=Seleziona il tipo di nodo figlio da visualizzare
 FOUND\ %D\ MATCHING\ ROWS=Trovate %d righe corrispondenti
 THE\ ORIGIONAL\ FILE\ LOCATION\ CANNOT\ BE\ FOUND=Impossibile trovare la postazione originale del file
 SAVE\ PENDING\ CHANGES?=Salvare modifiche in sospeso?
@@ -159,7 +159,7 @@ SEARCH=Cerca
 FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossibile aggiungere la postazione al corpus remoto. Vedi log degli errori per maggiori dettagli.
 ADD\ LOCATION=Aggiungi postazione
 ENTER\ THE\ URL=Inserisci URL
-LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=La postazione dovrebbe essere un URI assoluto. Ci\u00f2 significa che dovrebbe  iniziare con uno schema, per esempio "http://" oppure "file://"
+LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=La postazione dovrebbe essere un URI assoluto. Ci\u00f2 significa che dovrebbe iniziare con uno schema, per esempio "http://" oppure "file://"
 ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Nome file non valido. Vedi log degli errori per maggiori dettagli.
 WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=Attenzione: nessun file esistente nella postazione specificata!
 ERROR\ ADDING\ RESOURCE=Errore durante l'aggiunta di risorse
@@ -211,7 +211,7 @@ PROFILES_RELOAD\ SELECTION=Ricarica selezione
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Scarica i profili CMDI pi\u00f9 recenti
 TOTAL\ METADATA\ FILES\ FOUND\:\ =File di metadati trovati in totale:
 TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Errore di convalida dello schema (controlla conformit\u00e0 con XML per maggiori dettagli)
-TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponibile nel menu 'Preferiti'
+TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponibile nel menu Preferiti
 TOOLTIP_UNSAVED\ CHANGES=Modifiche non salvate
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=Cronologia delle modifiche disponibile
 TOOLTIP_FILE\ NOT\ FOUND=File non trovato
@@ -260,7 +260,7 @@ IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticazio
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limita caratteri nei nomi dei file (formato adatto a LAMUS)
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rinomina i file di metadati (devono corrispondere ai nomi nell'albero del corpus locale)
 SHOW\ ERRORS\ IN\ TABLE=Mostra errori nella tabella
-RESOURCE\ COPY\ ERRORS=Errori nella copia delle risorse
+RESOURCE\ COPY\ ERRORS=Errori nella copia della risorsa
 IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Se si seleziona la copia dei file di risorse, eventuali errori presenti nella copia dei file verranno riportati qui.
 VALIDATION\ ERRORS=Errori nella convalida
 WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=Durante l'importazione o l'esportazione, i file di metadati verranno convalidati (per la conformit\u00e0 con lo schema XML) ed eventuali errori verranno riportati qui.
@@ -316,7 +316,7 @@ PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=La stringa incollata non \u00e8 un file
 THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Il file di destinazione non \u00e8 nella cache
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Impossibile incollare i sottonodi della sessione in un corpus
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Il file del nodo di destinazione non esiste
-COPYING\ WITH\ UNSAVED\ CHANGES=Copia in corso con modifiche non salvate
+COPYING\ WITH\ UNSAVED\ CHANGES=Copia con modifiche non salvate in corso
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche non salvate.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti. Continuare comunque?
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La postazione esiste gi\u00e0 e non verr\u00e0 aggiunta nuovamente
 DELETE=Elimina
@@ -333,6 +333,6 @@ DELETE\ FROM\ PARENT=Elimina da nodo padre
 COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Impossibile eliminare il nodo perch\u00e9 senza nodo padre
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =Da:
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione I/O durante la lettura del contenuto della guida</strong></p>
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione di I/O durante la lettura del contenuto della guida</strong></p>
 XSDCHECKER=XSD checker 
-LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo 'Descrizione' (IMDI)
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Lingue da inserire nell'elenco a tendina del campo Descrizione (IMDI)
