checked spelling mistakes in menus, widgets, services and wizard

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -73,7 +73,7 @@ NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per attivare questo
 FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Impossibile disattivare il plugin richiesto.
 NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=Metodo per disattivare questo tipo di plugin non ancora disponibile. 
 DOWNLOADING\ CURRENTLY\ LOADED\ VOCABULARIES=Download dei vocabolari attualmente caricati in corso
-DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\ NEED\ TO\ RESTART\ THE\ APPLICATION\ FOR\ THE\ NEW\ VOCABULARIES\ TO\ TAKE\ EFFECT=Scaricato/i {0} dei {1} vocabolari attualmente in uso.\n\u00c8 necessario riavviare l'applicazione affinch\u00e9 i nuovi vocabolari possano essere utilizzati.
+DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\ NEED\ TO\ RESTART\ THE\ APPLICATION\ FOR\ THE\ NEW\ VOCABULARIES\ TO\ TAKE\ EFFECT=Scaricato/i {0} dei {1} vocabolari attualmente in uso.\n\u00c8 necessario riavviare l''applicazione affinch\u00e9 i nuovi vocabolari possano essere utilizzati.
 A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=Impossibile leggere uno dei vocabolari controllati.\n{0}\nAlcuni campi potrebbero non visualizzare tutti le opzioni disponibili.
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica vocabolari correnti
 LOAD\ CONTROLLED\ VOCABULARY=Carica vocabolario controllato
