--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -38,7 +38,7 @@ LICENSE=Licenza
 ABOUT\ {0}=Informazioni su {0}
 CLOSE=Chiudi
 DISPLAY\ LICENSE=Visualizza licenza
-ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l''organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata e sviluppata da {0}\nMantenimento ed estensioni a cura di {1}\nArbil si serve inoltre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {2} {3} {4}\n{5}\nData di compilazione: {6}\n\nVersione Java: {7}\nFornitore: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nSeleziona Visualizza licenza per vedere la versione completa della licenza.
+ABOUTBOXTEXT=Archive Builder\nUno strumento locale per l''organizzazione di dati linguistici.\nMax Planck Institute for Psycholinguistics\n\nApplicazione progettata e sviluppata da Peter Withers\nMantenimento ed estensioni a cura di Peter Withers & Twan Goosen\nArbil si serve inoltre di componenti di IMDI API e Lamus Type Checker\n\nVersione: {0} {1} {2}\n{3}\nData di compilazione: {4}\n\nVersione Java: {5}\nFornitore: {6}\nJVM: {7} {8}\nSistema operativo: {9} {10} {11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil dispone della GNU General Public License versione 2.\nSeleziona Visualizza licenza per vedere la versione completa della licenza.
 SAVE\ TO\ DISK?=Salvare su disco?
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=Impossibile caricare {0} postazioni. Vedi log degli errori per maggiori dettagli.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Tutte le modifiche a {0} ancora in sospeso veranno salvate. Continuare?
