--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -39,7 +39,7 @@ LICENSE=License
 ABOUT\ {0}=About {0}
 CLOSE=Close
 DISPLAY\ LICENSE=Display license
-ABOUTBOXTEXT=Archive Builder\nA local tool for organising linguistic data.\nMax Planck Institute for Psycholinguistics\n\nApplication originally designed and developed by {0}\nCurrent maintenance and extentions by {1}\nArbil also uses components of the IMDI API and Lamus Type Checker\n\nVersion: {2}.{3}.{4}\n{5}\nCompile Date: {6}\n\nJava version: {7}\nVendor: {8}\nJVM: {9} {10}\nOperating system: {11} {12} ({13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nArbil has been licensed under the GNU General Public License version 2.\nClick the button below to see the full version of this license.
+ABOUTBOXTEXT=Archive Builder\nA local tool for organising linguistic data.\nMax Planck Institute for Psycholinguistics\n\nApplication originally designed and developed by Peter Withers\nCurrent maintenance and extentions by Peter Withers and Twan Goosen\nArbil also uses components of the IMDI API and Lamus Type Checker\n\nVersion: {0}.{1}.{2}\n{3}\nCompile Date: {4}\n\nJava version: {5}\nVendor: {6}\nJVM: {7} {8}\nOperating system: {9} {10} ({11})\n\nCopyright (C) {12} Max Planck Institute for Psycholinguistics\n\nArbil has been licensed under the GNU General Public License version 2.\nClick the button below to see the full version of this license.
 SAVE\ TO\ DISK?=SAVE TO DISK?
 FIELD\ NAME=Field Name
 VALUE=Value
