--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -35,7 +35,7 @@ LICENSE=Lizenz
 ABOUT\ {0}=\u00dcber {0}
 CLOSE=Schlie\u00dfen
 DISPLAY\ LICENSE=Lizenz anzeigen
-ABOUTBOXTEXT=Archive Builder\nEin lokales Programm zum Organisieren linguistischer Daten.\nMax-Planck-Institut f\u00fcr Psycholinguistik\n\nAnwendung urspr\u00fcnglich designt und entwickelt von {0}\nLaufende Wartung und Erweiterung von {1}\nArbil verwendet auch Teile der IMDI-API und des LAMUS-Type-Checkers\nnVersion: {2}.{3}.{4} {5}\nKompilierungsdatum: {6}\nnJava version: {7}nAnbieter: {8}\nJVM: {9} {10}\nBetriebssystem: {11} {12} ({13})\nnCopyright (C) {14} Max-Planck-Institut f\u00fcr Psycholinguistik\nnArbil ist lizensiert unter der GNU General Public License version 2.\nKlicken Sie auf die Schaltfl\u00e4che unten, um den Volltext der Lizenz zu sehen.
+ABOUTBOXTEXT=Archive Builder\nEin lokales Programm zum Organisieren linguistischer Daten.\nMax-Planck-Institut f\u00fcr Psycholinguistik\n\nAnwendung urspr\u00fcnglich designt und entwickelt von Peter Withers\nLaufende Wartung und Erweiterung von Peter Withers und Twan Goosen\nArbil verwendet auch Teile der IMDI-API und des LAMUS-Type-Checkers\nnVersion: {0}.{1}.{2} {3}\nKompilierungsdatum: {4}\nnJava version: {5}nAnbieter: {6}\nJVM: {7} {8}\nBetriebssystem: {9} {10} ({11})\nnCopyright (C) {12} Max-Planck-Institut f\u00fcr Psycholinguistik\nnArbil ist lizensiert unter der GNU General Public License version 2.\nKlicken Sie auf die Schaltfl\u00e4che unten, um den Volltext der Lizenz zu sehen.
 SAVE\ TO\ DISK?=Auf Festplatte speichern?
 FIELD\ NAME=Feldname
 VALUE=Wert
