--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -272,4 +272,11 @@ PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VI
 PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Bitte w\u00e4hlen Sie eine Sprache
 SELECT\ LANGUAGE=Sprache ausw\u00e4hlen
 SYSTEM\ DEFAULT=Systemstandardeinstellung
-MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Si \u00e8 scelto di cambiare il modo di visualizzare i documenti dei metadati sull'albero.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Sie haben ausgew\u00e4hlt die Anzeige von Metadaten-Dokumenten im Baum zu \u00e4ndern. \nDieser Vorgang hat das Speichern und neu Laden von allen aktuell geladenen Knoten zur Folge. M\u00f6chten Sie fortfahren? 
+LANGUAGE\ SELECTION=Sprachauswahl
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Verbatim XML Struktur im CMDI-Baum anzeigen
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Bei Auswahl werden die Korpusb\u00e4ume der Struktur von CMDI Dokumenten folgen ohne sie zusammenzuf\u00fcgen oder zu komprimieren
+MENU_INCREASE_FONT_SIZE=Gr\u00f6\u00dfere Schriftart
+MENU_DECREASE_FONT_SIZE=Kleinere Schriftart
+MENU_RESET_FONT_SIZE=Gr\u00f6\u00dfe der Schriftart einstellen
+MENU_VIEW=Anzeigen 
